2010-05-04  Jon Nettleton  <jon.nettleton@gmail.com>

	Improve 2d performance on chipsets that don't have
	AGP/PCIe support yet.

	* src/via_accel.c: (viaSetupForScreenToScreenCopy),
	(viaSetupForSolidFill), (viaSetupForMono8x8PatternFill),
	(viaSetupForColor8x8PatternFill),
	(viaSetupForCPUToScreenColorExpandFill),
	(viaSubsequentScanlineCPUToScreenColorExpandFill),
	(viaSetupForImageWrite), (viaSubsequentImageWriteRect),
	(viaSetupForSolidLine), (viaSetupForDashedLine), (viaInitXAA):

2010-05-04  Jon Nettleton <jon.nettleton@gmail.com>

	Put timeouts on our while statements.  These codepaths
	should be interrupted by a hardware state change, but
	if something goes wrong they loop forevere.  Let's try
	and behave a little by putting a timeout on these loops.

	* src/via_swov.c: (viaWaitHQVFlip), (viaWaitHQVFlipClear),
	(viaWaitHQVDone):
	* src/via_video.c: (Flip):

2010-05-04  Jon Nettleton <jon.nettleton@gmail.com>

	Add XVideo support for the VX855 Chipset.
	To support this chipset I have added HWDiff->HQVCmeRegs
	that allows handling differing register values, and
	HWDiff->dwNewScaleCtl which allows selection of a
	new Video scaling engine needed for the VX800/VX855
	chipsets.

	* src/via.h:
	* src/via_bandwidth.c: (ViaSetSecondaryFIFO):
	* src/via_driver.h:
	* src/via_swov.c: (SaveVideoRegister), (VIAVidHWDiffInit),
	(viaOverlayHQVCalcZoomWidth), (viaOverlayHQVCalcZoomHeight),
	(ViaSwovSurfaceCreate), (SetHQVFetch), (Upd_Video):
	* src/via_swov.h:

2010-04-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Replace RegionsEqual with REGION_EQUAL and use 
        the xf86XVFillKeyHelperDrawable instead of xf86XVFillKeyHelper

	* src/via_video.c: (viaReputImage), (viaPutImage):

2010-03-07  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fix segfaults with EXA and XV (Ticket #359)
        Tested on K8M890 and VN800

	* src/via_video.c: (viaReputImage), (viaPutImage):

2010-02-10  Bartosz Kosiorek  <gang65@poczta.onet.pl>
